Half Conversion To React

--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to Chaunie's</title>
-    <link rel="stylesheet" href="chanies_index.css" />
-    <link rel="stylesheet" href="chauniesHeader.css" />
     <link rel="stylesheet" href="fontawesome-free-6.2.1-web/css/all.min.css" />
     <link rel="chanies icon" type="x-icon" href="Photos/logoImg.png" />
-
     <style>
       .closeBtn {
         position: absolute;
@@ -29,102 +25,7 @@
     </style>
   </head>
   <body>
-    <!-- Pop up for when page is first loaded -->
-    <div class="button-container">
-      <div class="buttonHolder">
-        <button class="closeBtn" title="Close">
-          <i class="fa-sharp fa-regular fa-circle-xmark"></i>
-        </button>
-        <h1 title="Welcome to Chaunies">WELCOME TO CHAUNIE'S</h1>
-        <article>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, ad?
-        </article>
-        <p>Click here to see our services</p>
-        <a class="toServices" title="Services" href="chauniesServices.html">
-          <i class="fa fa-arrow-right" aria-hidden="true"></i>
-        </a>
-      </div>
-    </div>
-    <!-- Navigation Links -->
-    <header>
-      <nav>
-        <div class="header-container">
-          <img
-            src="Photos/chanie's.png"
-            alt="chanies logo"
-            id="logo"
-            title="Chaunies246"
-          />
-          <ul class="links-container">
-            <!-- <li class="links"><a class="nav_menu" href="#">HOME</a></li> -->
-            <li class="links">
-              <a class="nav_menu" href="chauniesOrder.html" title="Order Now"
-                >PLACE AN ORDER</a
-              >
-            </li>
-            <li class="links">
-              <a class="nav_menu" href="chauniesServices.html" title="Services"
-                >SERVICES</a
-              >
-            </li>
-            <li class="links">
-              <a class="nav_menu" href="chauniesAboutUs.html" title="About Us"
-                >ABOUT US</a
-              >
-            </li>
-            <li class="links">
-              <a
-                class="nav_menu"
-                href="chauniesContactUs.html"
-                title="Contact Us"
-                >CONTACT US</a
-              >
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-
-    <!-- Main Content -->
-    <section class="main-area">
-      <!-- Greeting Section -->
-      <div class="greeting-container">
-        <h1>deliciously smooth</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, iure,
-          voluptates non sint nemo dolorum quis impedit laudantium asperiores
-          sequi distinctio quos voluptas iusto voluptate, nisi deleniti.
-          Architecto placeat est, perspiciatis, ullam repellat, nostrum beatae
-          fugit nobis tenetur itaque ad!
-        </p>
-      </div>
-    </section>
-
-    <!-- Social Links -->
-    <div class="socials-container">
-      <ul class="socials">
-        <li>
-          <a
-            title="Email"
-            href="mailto:chaunies246@outlook.com ? subject=Ask Chaunie Anything "
-          >
-            <i class="fa-regular fa-envelope"></i>
-          </a>
-        </li>
-        <li>
-          <a
-            title="Instagram"
-            href="https://instagram.com/chaunies246?igshid=MTg0ZDhmNDA="
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
-        </li>
-        <li>
-          <a title="Whatsapp" href="wa.link/9mc4s6">
-            <i class="fa-brands fa-whatsapp"></i
-          ></a>
-        </li>
-      </ul>
-    </div>
-    <script src="index.js"></script>
+    <div id="root"></div>
+    <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
